--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,9 @@ Description: Write readable and maintainable regular expressions.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Config/testthat/edition: 3
+RoxygenNote: 7.3.2
+Imports: 
+    glue,
+    rlang,
+    stringr
