Documentation and bug fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,18 @@
 
 export(any_of)
 export(capture)
+export(digit)
 export(end)
 export(glue)
 export(literally)
 export(maybe)
+export(newline)
 export(none_of)
 export(option)
 export(start)
 export(times)
+export(whitespace)
+export(word)
 import(glue)
 import(rlang)
 import(stringr)
